[package]
name = "mtg_set_colors"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }